<resources>
    <string name="app_name"> CI Lot </string>
    <string name="toolbar_title">  </string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Open navigation drawer</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">back</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create</string>
    <string name="edit_account">Edit Account</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="plus">plus</string>
    <string name="icon">icon</string>
    <string name="icons">Icons</string>
    <string name="buffy">Buffy</string>
    <string name="ekho">Ekho</string>
    <string name="ricardo">Ricardo</string>
    <string name="lvl_8">lvl 8</string>
    <string name="lvl_6">lvl 6</string>
    <string name="lvl_10">lvl 10</string>
    <string name="lvl_12">lvl 12</string>
    <string name="lvl_14">lvl 14</string>
    <string name="lvl_16">lvl 16</string>
    <string name="lvl_18">lvl 18</string>
    <string name="lvl_20">lvl 20</string>
    <string name="lvl_22">lvl 22</string>
    <string name="lvl_24">lvl 24</string>
    <string name="lvl_26">lvl 26</string>
    <string name="lvl_28">lvl 28</string>
    <string name="create_account2">Create Account</string>

    <string name="status">Status:</string>
    <string name="open">Open</string>
    <string name="moderate">Moderate</string>
    <string name="full">Full</string>
    <string name="submit">Submit</string>
    <string name="lot_A1">A1</string>
    <string name="lot_A2">A2</string>
    <string name="lot_A3">A3</string>
    <string name="lot_A4">A4</string>
    <string name="lot_A5">A5</string>
    <string name="lot_A6">A6</string>
    <string name="lot_A7">A7</string>
    <string name="lot_A8">A8</string>
    <string name="lot_A9">A9</string>
    <string name="lot_A10">A10</string>
    <string name="lot_A11">A11</string>
</resources>
