<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColorPrimary"
        />

    <TextView
        android:id="@+id/lotA1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/border"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lot_A1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/lot_a1"
        android:layout_marginTop="5dp"
        android:text="@string/status" />

    <RadioGroup
        android:id="@+id/poll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_text"
        >

        <RadioButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/open">

        </RadioButton>

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/moderate">

        </RadioButton>


        <RadioButton
            android:id="@+id/full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/full">

        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_below="@+id/poll"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/textColorPrimary">

    </Button>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/status_text"
        android:layout_below="@id/lotA1_text"
        android:layout_marginTop="5dp"
        android:layout_marginStart="3dp"
        android:text="@string/open" />


</RelativeLayout>